<resources>
    <string name="app_name">Tradely</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="explore_stocks">Explore Stocks</string>
    <string name="sign_out">Sign Out</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="edit">edit</string>
    <string name="trade">Trade</string>
    <string name="stock_info">Stock Info</string>
    <string name="buy_stock">Buy Stock</string>
    <string name="buy">Buy</string>
    <string name="max">Max</string>
    <string name="year">year</string>
    <string name="month">month</string>
    <string name="day">day</string>
    <string name="missing_date_data">Date: No Data Available</string>
    <string name="default_price">Price: 0$</string>
    <string name="missing_data">Missing Data</string>
    <string name="no_stock_selected">No Stock Selected</string>
    <string name="num_shares">Num Shares</string>
    <string name="total_price">Total Price</string>
    <string name="amount_to_buy">Amount to buy</string>
    <string name="add_to_watchlist">Watchlist</string>
    <string name="watchlist">Watchlist</string>
    <string name="my_stocks">My Stocks</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lacus massa, eleifend et nisl ut, interdum commodo justo. Mauris congue efficitur sem vitae ultricies. Fusce dictum eget orci quis tincidunt. Aliquam laoreet rhoncus</string>
    <string name="no_description">No description</string>
    <string name="zero">0</string>
</resources>