<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="dev.lordyorden.tradely.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_leaderboard"
        android:name="dev.lordyorden.tradely.ui.leaderboard.LeaderboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_leaderboard" />

    <fragment
        android:id="@+id/navigation_explore_stocks"
        android:name="dev.lordyorden.tradely.ui.explore.ExploreStocksFragment"
        android:label="@string/explore_stocks"
        tools:layout="@layout/fragment_explore_stocks" />

    <fragment
        android:id="@+id/navigation_stock_info"
        android:name="dev.lordyorden.tradely.ui.stock_info.HostFragment"
        android:label="@string/stock_info"
        tools:layout="@layout/fragment_stock_info" />
</navigation>